# wishmap

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  wishmap.toml
data/routes/: ski-tour-example.gpx  weekend-gravel-loop.gpx
src/wishmap/: app.py  config.py  exceptions.py  garmin.py  geojson.py  gpx.py  models.py  ratings.py  secrets.py  strava.py  sync_runner.py
src/wishmap/static/: index.html
tests/: conftest.py  test_endpoints.py  test_models.py  test_ratings.py  test_secret_resolution.py  test_secrets.py  test_sync_endpoints.py  test_sync_runner.py  test_unlock_endpoint.py
