[project]
name = "wishmap"
version = "0.1.0"
description = "Self-hosted map with pins, routes, and filtering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "gpxpy>=1.6.2",
    "garminconnect>=0.3.0",
]

[project.scripts]
wishmap = "wishmap.app:main"

[tool.pyright]
pythonVersion = "3.13"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wishmap"]
